make synchronization optimization, added flamegraphs